Understanding Django structure and code style.

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@ admin)
 
   <style>
     body {
-      background: url("{% static "subtle_dots.png" %}") repeat;
+      background: url("{% static 'subtle_dots.png' %}") repeat;
     }
 
     /*
