--- a/apps/user_resume/templates/user_resume/user_resume_edit.html
+++ b/apps/user_resume/templates/user_resume/user_resume_edit.html
@@ -16,7 +16,7 @@ Template for editing a resume item.
 
 {% block user_resume_header_text %}Edit resume{% endblock %}
 
-{% block user_resume_submit_button_text %}Edit{% endblock %}
+{% block user_resume_submit_button_text %}Update{% endblock %}
 
 {% block user_resume_additional_buttons %}
     <button type="submit" name="delete" class="btn btn-danger delete-button">
