Refactor code. Add design explanation. Change website layout to match requirements.

--- a/apps/resume/templates/resume/resume_item_edit.html
+++ b/apps/resume/templates/resume/resume_item_edit.html
@@ -14,6 +14,11 @@ Template for editing a resume item.
   </style>
 {% endblock %}
 
+{% block content %}
+{{ block.super }}
+<a class="btn btn-success" href="../../../" style="margin-top: 20px;">Back to resume</a>
+{% endblock %}
+
 {% block resume_item_header_text %}Edit resume item{% endblock %}
 
 {% block resume_item_submit_button_text %}Edit{% endblock %}
